demo-02/kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
  - secretName: hello-world-local-tls
    hosts:
    - hello-world.local
  rules:
  - host: hello-world.local
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /*
#  - host: monocular.local
#    http:
#      paths:
#      - backend:
#          serviceName: s2
#          servicePort: 80
#        path: /foo
