demo-02/kubernetes/ingress/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: test-service
    servicePort: 80
  rules:
    - host: hello-world.local
      http:
        paths:
          - path: /
            backend:
              serviceName: other-service
              servicePort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: test
          image: nginx:latest
          #imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
